# stundenhexe

./: README.md  pyproject.toml
backend/: README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/docker/postgres/: Dockerfile  init.sql  postgresql.conf
backend/src/studenhexe/: main.py
backend/src/studenhexe/db/: base.py
backend/src/studenhexe/models/: school.py
backend/src/stundenhexe/: main.py
backend/src/stundenhexe/core/: config.py
backend/src/stundenhexe/models/: __init__.py  base.py  room.py  types.py
docs/architecture/: 01_system_overview.md  02_constraints.md  03_data_model.md
docs/decisions/: 001_constraint_solver.md  adr_template.md
docs/project-management/: backend_plan.md  docker_setup.md  mvp_roadmap.md
src/studenhexe/: __init__.py
