[project]
name = "studenhexe-backend"
version = "0.1.0"
description = "School timetable planning system backend"
authors = []
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/studenhexe"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

# Enable all rules by default
select = ["ALL"]

# Ignore specific rules
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
]

# Exclude files and directories
exclude = [
    ".git",
    ".rye",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["studenhexe"]
combine-as-imports = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pycodestyle]
max-doc-length = 100

[tool.ruff.pylint]
max-args = 8
max-statements = 50

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=studenhexe --cov-report=term-missing"
